# romaudit_cli

./: .gitignore  Build.sh  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEV-NOTES.md  Example-config.toml  LICENSE-FAQ.md  LICENSE.md  MIGRATION.md  MODULAR_README.md  MODULAR_STRUCTURE_GUIDE.md  NOTICE.md  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.2.1.md  VERSION-201-NOTES.md  VERSION_220_NOTES.md
src/: config.rs  error.rs  main.rs  types.rs
src/cache/: mod.rs
src/database/: mod.rs
src/logger/: mod.rs
src/organizer/: folders.rs  mame.rs  mod.rs  plugin.rs  processor.rs  rules.rs  standard.rs
src/parser/: detector.rs  mod.rs  xml.rs
src/scanner/: collector.rs  hasher.rs  hasher_optimized.rs  incremental.rs  mod.rs
