[package]
name = "romaudit_cli"
version = "1.6.0"
edition = "2024"
authors = ["Kotae42 kotae042@gmail.com"]
description = "A ROM collection management tool for personal use with intelligent organization"
readme = "README.md"
repository = "https://github.com/kotae42/romaudit_cli"
license-file = "license-noncommercial"
keywords = ["rom", "retro", "gaming", "organization", "personal-use"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
sha1 = "0.10.6"
md-5 = "0.10.6"
crc32fast = "1.3.0"
hex = "0.4.3"
quick-xml = "0.38.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
indicatif = "0.17.0"
digest = "0.10.7" # Explicitly include this, as it provides the common Digest trait

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3