[package]
name = "romaudit_cli"
version = "2.0.0"
edition = "2024"

[dependencies]
sha1 = "0.10.6"
md-5 = "0.10.6"
crc32fast = "1.3.0"
hex = "0.4.3"
quick-xml = "0.38.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
indicatif = "0.17.0"
digest = "0.10.7" # Explicitly include this, as it provides the common Digest trait
ctrlc = "3.4.7" # For handling Ctrl+C gracefully
# toml = "0.9.5" # Uncomment to enable config file support

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3